2005-10-31  Dan Nicolaescu  <dann@ics.uci.edu>

	* puresize.h (BASE_PURESIZE): Increment to 1170000.

2005-10-31  Romain Francoise  <romain@orebokech.com>

	* macfns.c: Update copyright year.
	* m/gould.h: Likewise.

2005-10-30  Kim F. Storm  <storm@cua.dk>

	* xdisp.c (display_line): Restore it->current_x and call
	extend_face_to_end_of_line when last glyph doesn't fit on line.
	(set_glyph_string_background_width): Remove specific tests  here
	to see if face background should extend to end of line.  Simplify.

2005-10-30  Richard M. Stallman  <rms@gnu.org>

	* alloc.c (BYTES_USED): Use uordblks, not arena.
	(bytes_used_when_reconsidered): New variable.
	(emacs_blocked_free): Set that.

2005-10-29  Chong Yidong  <cyd@stupidchicken.com>

	* alloc.c (emacs_blocked_free): Fix typo.

2005-10-29  Richard M. Stallman  <rms@gnu.org>

	* data.c (Fmake_variable_frame_local): Doc fix.

	* xdisp.c (handle_fontified_prop): Do nothing if memory full.
	(format_mode_line_unwind_data): New arg SAVE_PROPTRANS
	controls whether to save and restore mode_line_proptrans_alist.
	Callers changed.
	(unwind_format_mode_line): Work with that feature.
	(redisplay_internal): Don't call prepare_menu_bars if memory full.
	(move_elt_to_front): New function.
	(display_mode_element): Use move_elt_to_front.
	Don't bother munging text props on a null string.
	Delete obsolete elts from mode_line_proptrans_alist.
	(decode_mode_spec): Test Vmemory_full, not spare_memory.
	(Fformat_mode_line): Clear mode_line_proptrans_alist after saving.

	* lisp.h (memory_full_cons_threshold): Declared.
	(internal_lisp_condition_case): Declared.

	* alloc.c (syms_of_alloc) <memory-full>: Doc fix.
	(Fmemory_full_p): Function deleted.
	(syms_of_alloc): Don't defsubr it.
	(memory_full_cons_threshold): New variable.
	(spare_memory): Now a vector of 7 elts.
	(buffer_memory_full): Don't set Vmemory_full here.
	(xfree): Don't try to refill here.
	(emacs_blocked_free): Record BYTES_USED in local var.